--- a/public/fontello/demo.html
+++ b/public/fontello/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?28660997');
-      src: url('./font/fontello.eot?28660997#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?28660997') format('woff'),
-           url('./font/fontello.ttf?28660997') format('truetype'),
-           url('./font/fontello.svg?28660997#fontello') format('svg');
+      src: url('./font/fontello.eot?27344074');
+      src: url('./font/fontello.eot?27344074#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?27344074') format('woff'),
+           url('./font/fontello.ttf?27344074') format('truetype'),
+           url('./font/fontello.svg?27344074#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -301,6 +301,9 @@ body {
         <div class="the-icons span3" title="Code: 0x2709"><i class="demo-icon icon-mail">&#x2709;</i> <span class="i-name">icon-mail</span><span class="i-code">0x2709</span></div>
         <div class="the-icons span3" title="Code: 0xe0c1"><i class="demo-icon icon-plus">&#xe0c1;</i> <span class="i-name">icon-plus</span><span class="i-code">0xe0c1</span></div>
         <div class="the-icons span3" title="Code: 0xf061"><i class="demo-icon icon-user">&#xf061;</i> <span class="i-name">icon-user</span><span class="i-code">0xf061</span></div>
+        <div class="the-icons span3" title="Code: 0xf1fe"><i class="demo-icon icon-chart-area">&#xf1fe;</i> <span class="i-name">icon-chart-area</span><span class="i-code">0xf1fe</span></div>
+      </div>
+      <div class="row">
         <div class="the-icons span3" title="Code: 0x1f511"><i class="demo-icon icon-key">&#x1f511;</i> <span class="i-name">icon-key</span><span class="i-code">0x1f511</span></div>
       </div>
     </div>
