--- a/public/fontello/demo.html
+++ b/public/fontello/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?39070912');
-      src: url('./font/fontello.eot?39070912#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?39070912') format('woff'),
-           url('./font/fontello.ttf?39070912') format('truetype'),
-           url('./font/fontello.svg?39070912#fontello') format('svg');
+      src: url('./font/fontello.eot?50285481');
+      src: url('./font/fontello.eot?50285481#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?50285481') format('woff'),
+           url('./font/fontello.ttf?50285481') format('truetype'),
+           url('./font/fontello.svg?50285481#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -299,11 +299,12 @@ body {
     <div class="container" id="icons">
       <div class="row">
         <div class="the-icons span3" title="Code: 0x2709"><i class="demo-icon icon-mail">&#x2709;</i> <span class="i-name">icon-mail</span><span class="i-code">0x2709</span></div>
+        <div class="the-icons span3" title="Code: 0xe03e"><i class="demo-icon icon-search">&#xe03e;</i> <span class="i-name">icon-search</span><span class="i-code">0xe03e</span></div>
         <div class="the-icons span3" title="Code: 0xe09d"><i class="demo-icon icon-eye">&#xe09d;</i> <span class="i-name">icon-eye</span><span class="i-code">0xe09d</span></div>
         <div class="the-icons span3" title="Code: 0xe0c1"><i class="demo-icon icon-plus">&#xe0c1;</i> <span class="i-name">icon-plus</span><span class="i-code">0xe0c1</span></div>
-        <div class="the-icons span3" title="Code: 0xe102"><i class="demo-icon icon-eye-off">&#xe102;</i> <span class="i-name">icon-eye-off</span><span class="i-code">0xe102</span></div>
       </div>
       <div class="row">
+        <div class="the-icons span3" title="Code: 0xe102"><i class="demo-icon icon-eye-off">&#xe102;</i> <span class="i-name">icon-eye-off</span><span class="i-code">0xe102</span></div>
         <div class="the-icons span3" title="Code: 0xf061"><i class="demo-icon icon-user">&#xf061;</i> <span class="i-name">icon-user</span><span class="i-code">0xf061</span></div>
         <div class="the-icons span3" title="Code: 0xf1fe"><i class="demo-icon icon-chart-area">&#xf1fe;</i> <span class="i-name">icon-chart-area</span><span class="i-code">0xf1fe</span></div>
         <div class="the-icons span3" title="Code: 0x1f511"><i class="demo-icon icon-key">&#x1f511;</i> <span class="i-name">icon-key</span><span class="i-code">0x1f511</span></div>
