--- a/public/fontello/demo.html
+++ b/public/fontello/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?50285481');
-      src: url('./font/fontello.eot?50285481#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?50285481') format('woff'),
-           url('./font/fontello.ttf?50285481') format('truetype'),
-           url('./font/fontello.svg?50285481#fontello') format('svg');
+      src: url('./font/fontello.eot?36288475');
+      src: url('./font/fontello.eot?36288475#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?36288475') format('woff'),
+           url('./font/fontello.ttf?36288475') format('truetype'),
+           url('./font/fontello.svg?36288475#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -305,8 +305,13 @@ body {
       </div>
       <div class="row">
         <div class="the-icons span3" title="Code: 0xe102"><i class="demo-icon icon-eye-off">&#xe102;</i> <span class="i-name">icon-eye-off</span><span class="i-code">0xe102</span></div>
+        <div class="the-icons span3" title="Code: 0xe829"><i class="demo-icon icon-pharmacy">&#xe829;</i> <span class="i-name">icon-pharmacy</span><span class="i-code">0xe829</span></div>
         <div class="the-icons span3" title="Code: 0xf061"><i class="demo-icon icon-user">&#xf061;</i> <span class="i-name">icon-user</span><span class="i-code">0xf061</span></div>
+        <div class="the-icons span3" title="Code: 0xf064"><i class="demo-icon icon-users">&#xf064;</i> <span class="i-name">icon-users</span><span class="i-code">0xf064</span></div>
+      </div>
+      <div class="row">
         <div class="the-icons span3" title="Code: 0xf1fe"><i class="demo-icon icon-chart-area">&#xf1fe;</i> <span class="i-name">icon-chart-area</span><span class="i-code">0xf1fe</span></div>
+        <div class="the-icons span3" title="Code: 0xf21e"><i class="demo-icon icon-heartbeat">&#xf21e;</i> <span class="i-name">icon-heartbeat</span><span class="i-code">0xf21e</span></div>
         <div class="the-icons span3" title="Code: 0x1f511"><i class="demo-icon icon-key">&#x1f511;</i> <span class="i-name">icon-key</span><span class="i-code">0x1f511</span></div>
       </div>
     </div>
