--- a/public/fontello/demo.html
+++ b/public/fontello/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?36288475');
-      src: url('./font/fontello.eot?36288475#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?36288475') format('woff'),
-           url('./font/fontello.ttf?36288475') format('truetype'),
-           url('./font/fontello.svg?36288475#fontello') format('svg');
+      src: url('./font/fontello.eot?18384054');
+      src: url('./font/fontello.eot?18384054#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?18384054') format('woff'),
+           url('./font/fontello.ttf?18384054') format('truetype'),
+           url('./font/fontello.svg?18384054#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -299,19 +299,23 @@ body {
     <div class="container" id="icons">
       <div class="row">
         <div class="the-icons span3" title="Code: 0x2709"><i class="demo-icon icon-mail">&#x2709;</i> <span class="i-name">icon-mail</span><span class="i-code">0x2709</span></div>
+        <div class="the-icons span3" title="Code: 0xe033"><i class="demo-icon icon-vcard">&#xe033;</i> <span class="i-name">icon-vcard</span><span class="i-code">0xe033</span></div>
         <div class="the-icons span3" title="Code: 0xe03e"><i class="demo-icon icon-search">&#xe03e;</i> <span class="i-name">icon-search</span><span class="i-code">0xe03e</span></div>
+        <div class="the-icons span3" title="Code: 0xe095"><i class="demo-icon icon-location">&#xe095;</i> <span class="i-name">icon-location</span><span class="i-code">0xe095</span></div>
+      </div>
+      <div class="row">
         <div class="the-icons span3" title="Code: 0xe09d"><i class="demo-icon icon-eye">&#xe09d;</i> <span class="i-name">icon-eye</span><span class="i-code">0xe09d</span></div>
         <div class="the-icons span3" title="Code: 0xe0c1"><i class="demo-icon icon-plus">&#xe0c1;</i> <span class="i-name">icon-plus</span><span class="i-code">0xe0c1</span></div>
-      </div>
-      <div class="row">
         <div class="the-icons span3" title="Code: 0xe102"><i class="demo-icon icon-eye-off">&#xe102;</i> <span class="i-name">icon-eye-off</span><span class="i-code">0xe102</span></div>
         <div class="the-icons span3" title="Code: 0xe829"><i class="demo-icon icon-pharmacy">&#xe829;</i> <span class="i-name">icon-pharmacy</span><span class="i-code">0xe829</span></div>
-        <div class="the-icons span3" title="Code: 0xf061"><i class="demo-icon icon-user">&#xf061;</i> <span class="i-name">icon-user</span><span class="i-code">0xf061</span></div>
-        <div class="the-icons span3" title="Code: 0xf064"><i class="demo-icon icon-users">&#xf064;</i> <span class="i-name">icon-users</span><span class="i-code">0xf064</span></div>
       </div>
       <div class="row">
+        <div class="the-icons span3" title="Code: 0xf061"><i class="demo-icon icon-user">&#xf061;</i> <span class="i-name">icon-user</span><span class="i-code">0xf061</span></div>
+        <div class="the-icons span3" title="Code: 0xf064"><i class="demo-icon icon-users">&#xf064;</i> <span class="i-name">icon-users</span><span class="i-code">0xf064</span></div>
         <div class="the-icons span3" title="Code: 0xf1fe"><i class="demo-icon icon-chart-area">&#xf1fe;</i> <span class="i-name">icon-chart-area</span><span class="i-code">0xf1fe</span></div>
         <div class="the-icons span3" title="Code: 0xf21e"><i class="demo-icon icon-heartbeat">&#xf21e;</i> <span class="i-name">icon-heartbeat</span><span class="i-code">0xf21e</span></div>
+      </div>
+      <div class="row">
         <div class="the-icons span3" title="Code: 0x1f511"><i class="demo-icon icon-key">&#x1f511;</i> <span class="i-name">icon-key</span><span class="i-code">0x1f511</span></div>
       </div>
     </div>
